log
Fri 17 May 2024 10:49:23 PM UTC: 
 tests:  0|5
total_score: 0/70
9adccef
Fri 17 May 2024 11:34:57 PM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:10: error: expected expression before ‘}’ token
   66 |          }
      |          ^
Compilation failed
ad81ba6
Fri 17 May 2024 11:35:54 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:22: error: unused variable ‘adyacente’ [-Werror=unused-variable]
   67 |                Node* adyacente = copy(n);
      |                      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9f72b9b
Fri 17 May 2024 11:36:23 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
ee797a4
Fri 17 May 2024 11:38:37 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:38: error: statement with no effect [-Werror=unused-value]
   65 |             n -> sudo[fila][columna] == num;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b51765
Fri 17 May 2024 11:38:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0db9428
Fri 17 May 2024 11:48:22 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a85d648
Sat 18 May 2024 12:34:05 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:14: error: unused variable ‘casilla’ [-Werror=unused-variable]
   55 |          int casilla = n -> sudo[filas][columnas];
      |              ^~~~~~~
sudoku.c:51:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   51 |       int arreglo[10] = {0};
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecfdbc6
Sat 18 May 2024 01:36:21 AM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  5|3
total_score: 35/70
7cd9dc6
Sat 18 May 2024 01:37:51 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:90:14: error: unused variable ‘k’ [-Werror=unused-variable]
   90 |          int k=3*(i%3) + (j%3);
      |              ^
sudoku.c:89:14: error: unused variable ‘h’ [-Werror=unused-variable]
   89 |          int h=3*(i/3) + (j/3);
      |              ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:87:12: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   87 |        int arreglo[10] = {0};
      |            ^~~~~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb332fd
Sat 18 May 2024 01:40:14 AM UTC: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:93:31: error: ‘k’ undeclared (first use in this function)
   93 |          int Matriz = n->sudo[k][h];
      |                               ^
sudoku.c:93:31: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:93:34: error: ‘h’ undeclared (first use in this function)
   93 |          int Matriz = n->sudo[k][h];
      |                                  ^
sudoku.c:92:14: error: unused variable ‘columna’ [-Werror=unused-variable]
   92 |          int columna = 3 * (i%3) + (j%3);
      |              ^~~~~~~
sudoku.c:91:14: error: unused variable ‘fila’ [-Werror=unused-variable]
   91 |          int fila = 3 * (i/3) + (j/3);
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d3aee6
Sat 18 May 2024 01:41:54 AM UTC: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
7e53ae4
Sat 18 May 2024 09:56:25 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
1691dcb
Sat 18 May 2024 09:57:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
c2a79e1
Sat 18 May 2024 09:57:43 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
799cf13
